# pure-iter-rs

./: Cargo.toml  README.md
.github/workflows/: push.yml
src/: lib.rs
src/adapter_impls/: map.rs
